# kubectl-dashboard

./: Cargo.toml
src/: app.rs  main.rs
src/k8s/: client.rs  mod.rs  resources.rs
src/views/: common.rs  config.rs  cronjobs.rs  deployments.rs  jobs.rs  mod.rs  pods.rs  services.rs
