[package]
name = "kubectl-dashboard"
version = "0.1.0"
edition = "2021"
description = "A desktop UI dashboard for Kubernetes management"

[dependencies]
# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["default"] }

# Kubernetes
kube = { version = "0.98", features = ["client", "config", "runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async channels for GUI
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
